--- a/components/application/CMakeLists.txt
+++ b/components/application/CMakeLists.txt
@@ -2,14 +2,16 @@ idf_component_register(
     SRCS
         "app_axis6/app_axis6.c"
         "app_gps/app_gps.c"
+        "app_gps/app_gps_parser.c"
         "app_sdcard/app_sdcard.c"
         "app_gui/app_gui.c"
         "app_gui/app_touch.cpp"
+        "app_gui/assets/wallpaper_image.c"
         "app_vibration/app_vibration.c"
         "app_power/app_power.c"
+        "app_state/app_state.c"
         "interface/axis6_interface/axis6_interface.c"
         "interface/gps_interface/gps_interface.c"
-        "../../main/ice.c"
     INCLUDE_DIRS
         "app_axis6/include"
         "app_gps/include"
@@ -17,6 +19,7 @@ idf_component_register(
         "app_gui/include"
         "app_vibration/include"
         "app_power/include"
+        "app_state/include"
         "interface/axis6_interface/include"
         "interface/gps_interface/include"
     REQUIRES
@@ -25,7 +28,7 @@ idf_component_register(
         fatfs
         lvgl
         display_hal
-        ml            
-        SensorLib           
-        esp_timer 
+        ml
+        SensorLib
+        esp_timer
 )
